lutris (0.5.5) eoan; urgency=medium

  * Initial support for Humble Bundle
  * Add resolution switching support for Wayland (Mutter only)
  * DXVK is enabled by default
  * Add initial support for VKD3D
  * Migrate D9VK configs to use DXVK
  * Remove d3d10 and d3d10_1 from dlls handled by DXVK
  * Fix an API breakage occuring with a Gtk update
  * Add a System info tab in Preferences
  * Better handle authentication failure for GOG
  * Fix case issue with key lookup in Steam VDF files
  * Add Yuzu runner
  * Add initial support for Humble Bundle
  * Add bsnes-hd beta and smsplus libretro cores
  * Add sound device option for Mednafen
  * Remove bundled winetricks
  * Remove xboxdrv integration

 -- Mathieu Comandon <strycore@gmail.com>  Thu, 26 Mar 2020 22:21:28 -0700

lutris (0.5.4) eoan; urgency=medium

  * Added support for Python 3.8.
  * Added config validation.
  * Added support for Nvidia PRIME off-load.
  * Added a popup after a successful game import.
  * Added alacritty as a terminal option.
  * Newly installed games that don't specify wine version will now default to the version used during installation.
  * Provide a fallback for when Lutris can't create a working directory.
  * Update libretro runners list.
  * Removed runners that have no binary builds.
  * Esync can now be enabled for Wine Staging >= 4.6.
  * Default scaling option for Mednafen is now nn4x.
  * steamwebhelper.exe is no longer disabled to avoid issues with the new Steam UI.
  * Ignore special symbols when generating identifiers for games.
  * Wine processes are now killed if installation is cancelled.
  * Fixed installation issues for users whose username begin with "x".
  * Fixed a bug with side panels hidden by default on first start.
  * Fixed an issue that would not allow user to unselect a game in right panel by clicking on an empty space in the library if that game was no longer installed.