@@ -2,6 +2,8 @@ lutris (0.5.5) eoan; urgency=medium
 
   * Initial support for Humble Bundle
   * Add resolution switching support for Wayland (Mutter only)
+  * Add option to enable ACO shader compiler on Mesa >= 19.3
+  * Add initial support for Humble Bundle
   * DXVK is enabled by default
   * Add initial support for VKD3D
   * Migrate D9VK configs to use DXVK
@@ -11,7 +13,6 @@ lutris (0.5.5) eoan; urgency=medium
   * Better handle authentication failure for GOG
   * Fix case issue with key lookup in Steam VDF files
   * Add Yuzu runner
-  * Add initial support for Humble Bundle
   * Add bsnes-hd beta and smsplus libretro cores
   * Add sound device option for Mednafen
   * Remove bundled winetricks
